fix bighomework1 slide

--- a/slides/homework1/index.html
+++ b/slides/homework1/index.html
@@ -20,7 +20,7 @@
 					<section>
 						<h2>2021 資訊之芽</h2>
 						<h3>第一次大作業</h3>
-						<small>by Jason 🌱</small>
+						<small>by Jason & Jiang 🌱</small>
 					</section>
 					<section>
 						<h3>第一次大作業主題揭曉</h3>
